err/jubatu.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/jubatu'...
Listing './lib/python3.5/site-packages/jubatu/i18n'...
Listing './lib/python3.5/site-packages/jubatu/i18n/sp'...
Listing './lib/python3.5/site-packages/jubatu/i18n/sp/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/jubatu/icons'...
Compiling './lib/python3.5/site-packages/jubatu/juxmpp.py'...
***   File "./lib/python3.5/site-packages/jubatu/juxmpp.py", line 364
    except socket.error, msg:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jubatu/startsession.py'...
***   File "./lib/python3.5/site-packages/jubatu/startsession.py", line 107
    ur'''"%s" is not a valid JID. Check the user and server.

Example:

If your JID is mike_smith@jabberserver.net,
put "jabberserver.net" in the "Server" field and
'mike_smith' in the "User" field.'''
                                                            

        

                                           
                                                
                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jubatu-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
